# macrolens_poc

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  Makefile  PRD.md  PROJECT_STATUS.md  README.md  TODO.md  justfile  pyproject.toml
config/: config.example.yaml  sources_matrix.yaml
docs/: GAP_ANALYSIS_LIVE_TEST.md  PRD.md  PROJECT_STATUS.md  TEST_RUN_SUMMARY_20251219.md  VULNERABILITIES.md
docs/design/: DESIGN_M4_LLM.md  DESIGN_MULTI_MODEL.md  DESIGN_ROBUST_ANALYSIS.md  DESIGN_ROBUST_DELTAS.md  DESIGN_STALE_DAYS_OVERRIDE.md  DESIGN_STALE_DETECTION.md
src/macrolens_poc/: __init__.py  cli.py  config.py  logging_utils.py  retry_utils.py
src/macrolens_poc/llm/: openai_provider.py  provider.py  service.py
src/macrolens_poc/llm/prompts/: system.md  user.md
src/macrolens_poc/pipeline/: __init__.py  matrix_status.py  run_series.py  status.py
src/macrolens_poc/report/: __init__.py  generate.py  v1.py
src/macrolens_poc/sources/: __init__.py  fred.py  matrix.py  matrix_status.py  yahoo.py
src/macrolens_poc/storage/: __init__.py  metadata_db.py  parquet_store.py
tests/: test_config_regression.py  test_fred_provider_optim.py  test_llm_reasoning.py  test_m0_skeleton.py  test_m1_sources_matrix.py  test_m2_pipeline_as_of.py  test_m2_pipeline_normalize.py  test_m2_provider_robustness.py  test_m2_storage_merge.py  test_m3_matrix_status_persist.py  test_m3_report_v1_deltas.py  test_m3_report_v1_risk_flags.py  test_m3_report_v1_robust_deltas.py  test_matrix_regression.py  test_metadata_db.py  test_pipeline_matrix_status.py  test_report_generate.py  test_sources_retry.py  test_stale_detection.py
